# e7xx

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
src/e7xx/: __init__.py  _dll.py  device.py
